--- a/index.html
+++ b/index.html
@@ -625,30 +625,30 @@
 				<div id="b-parallax1" class="parallax" data-trigger-id="17"></div>
 
 				<!-- WHAT? -->
-				<h2 class="title" id="what-is">What is Bitcoin?</h2>
-				<div class="sub-title">A global currency based on distributed computing instead of gold and banks.</div>
-
+				<div id="what-is-bitcoin" class="anchor-padded"></div>
+				<h2 class="title" id="what-is">Що ж воно таке цей біткоін?</h2>
+				<div class="sub-title">Глобальна валюта, побудована на розподіленому обчисленні замість золота та банків 
 				<div id="currency-container" class="flow-section-container">
-					<img src="./Bitcoin_files/currency-blank.png" class="flow-section-image">
+					<img src="img/what/currency-blank.png" class="flow-section-image" />
 
-					<div id="what-1a" class="flow-label font18" style="font-size: 112.5%;">Bitcoin (BTC) is a currency, that is:</div>
-					<div id="what-1b" class="flow-label font22" style="font-size: 137.5%;">DECENTRALISED,</div>
-					<div id="what-1c" class="flow-label font22" style="font-size: 137.5%;">DIGITAL</div>
-					<div id="what-1d" class="flow-label font22" style="font-size: 137.5%;">and GLOBAL.</div>
+					<div id="what-1a" class="flow-label font18">Біткоін (BTC) - це валюта, яка є:</div>
+					<div id="what-1b" class="flow-label font22">ДЕЦЕНТРАЛІЗОВАНОЮ,</div>
+					<div id="what-1c" class="flow-label font22">ЦИФРОВОЮ</div>
+					<div id="what-1d" class="flow-label font22">та ГЛОБАЛЬНОЮ.</div>
 
-					<div id="what-1e" class="flow-label font18" style="font-size: 112.5%;">it is...</div>
-					<div id="what-1f" class="flow-label font22" style="font-size: 137.5%;">CREATED,</div>
-					<div id="what-1g" class="flow-label font22" style="font-size: 137.5%;">TRADED</div>
-					<div id="what-1h" class="flow-label font22" style="font-size: 137.5%;"><span style="color:#989897">and</span> SPENT</div>
+					<div id="what-1e" class="flow-label font18">що означає...</div>
+					<div id="what-1f" class="flow-label font22">СТВОРЕНА,</div>
+					<div id="what-1g" class="flow-label font22">ТОРГУЄТЬСЯ</div>
+					<div id="what-1h" class="flow-label font22"><span style="color:#989897">і</span>ВИТРАЧАЄТЬСЯ</div>
 
-					<div id="what-1i" class="flow-label font18" style="font-size: 112.5%;">without bank<br>or state controls</div>
-					<div id="what-1j" class="flow-label font18" style="font-size: 112.5%;">online</div>
-					<div id="what-1k" class="flow-label font18" style="font-size: 112.5%;">and worldwide</div>
+					<div id="what-1i" class="flow-label font18">без участі банків<br/>або контролю держави</div>
+					<div id="what-1j" class="flow-label font18">онлайн</div>
+					<div id="what-1k" class="flow-label font18">і по всьому світові</div>
 
-					<div id="what-1l" class="flow-label font18" style="font-size: 112.5%;">All transactions are</div>
-					<div id="what-1m" class="flow-label font22" style="font-size: 137.5%;">FAST</div>
-					<div id="what-1n" class="flow-label font18" style="font-size: 112.5%;">and</div>
-					<div id="what-1o" class="flow-label font22" style="font-size: 137.5%;">LOW COST</div>
+					<div id="what-1l" class="flow-label font18">Всі операції є</div>
+					<div id="what-1m" class="flow-label font22">ШВИДКИМИ</div>
+					<div id="what-1n" class="flow-label font18">і</div>
+					<div id="what-1o" class="flow-label font22">ДЕШЕВИМИ</div>
 				</div>
 
 				<!-- HOW? -->
