--- a/index.html
+++ b/index.html
@@ -652,32 +652,32 @@
 				</div>
 
 				<!-- HOW? -->
-				<h2 class="title">How do you use Bitcoins?</h2>
+				<h2 class="title">Як користуватись біткоінами?</h2>
 
 				<div id="use-container" class="flow-section-container">
-					<img src="./Bitcoin_files/use-blank.png" class="flow-section-image">
+					<img src="img/what/use-blank.png" class="flow-section-image" />
 
-					<div id="use-1a" class="flow-label font22" style="font-size: 137.5%;">CREATE A DIGITAL <a href="http://www.fxcm.com/bitcoin/store.html" target="_blank" onclick="s_objectID=&quot;http://www.fxcm.com/bitcoin/store.html_1&quot;;return this.s_oc?this.s_oc(e):true">'WALLET'</a> FOR STORAGE</div>
-					<div id="use-1b" class="flow-label font22" style="font-size: 137.5%;">ONLINE</div>
-					<div id="use-1c" class="flow-label font18" style="font-size: 112.5%;">or</div>
-					<div id="use-1d" class="flow-label font22" style="font-size: 137.5%;">PC/MOBILE</div>
-					<div id="use-1e" class="flow-label font22" style="font-size: 137.5%;">FILL IT WITH BITCOINS</div>
+					<div id="use-1a" class="flow-label font22">СТВОРИТИ ЦИФРОВИЙ<a href="store.html" target="_blank">'ГАМАНЕЦЬ'</a>ДЛЯ ЗБЕРІГАННЯ</div>
+					<div id="use-1b" class="flow-label font22">ОНЛАЙН</div>
+					<div id="use-1c" class="flow-label font18">або</div>
+					<div id="use-1d" class="flow-label font22">КОМП`ЮТЕР/МОБІЛЬНИЙ ТЕЛЕФОН</div>
+					<div id="use-1e" class="flow-label font22">НАПОВНИ ЙОГО БІТКОІНАМИ</div>
 
-					<div id="use-2a" class="flow-label font22" style="font-size: 137.5%;">BUY BTC</div>
-					<div id="use-2b" class="flow-label font18" style="font-size: 112.5%;">With wire transfer or cash $,£,€, etc...</div>
-					<div id="use-2c" class="flow-label font14" style="font-size: 87.5%;">at online<br><a href="http://www.fxcm.com/bitcoin/forex.html" target="_blank" onclick="s_objectID=&quot;http://www.fxcm.com/bitcoin/forex.html_2&quot;;return this.s_oc?this.s_oc(e):true">BTC exchanges</a></div>
-					<div id="use-2d" class="flow-label font14" style="font-size: 87.5%;">at online<br>deposit platforms</div>
-					<div id="use-2e" class="flow-label font14" style="font-size: 87.5%;">from other<br>people in person</div>
-					<div id="use-2f" class="flow-label font14" style="font-size: 87.5%;">At current exchange rates</div>
-					<div id="use-2g" class="flow-label font14" style="font-size: 87.5%;">Negotiate price</div>
+					<div id="use-2a" class="flow-label font22">КУПУЙ BTC</div>
+					<div id="use-2b" class="flow-label font18">За допомогою банківського переказу або готівки $,£,€ і т.д....</div>
+					<div id="use-2c" class="flow-label font14">на онлайн<br/><a href="forex.html" target="_blank">біржах обміну біткоінів</a></div>
+					<div id="use-2d" class="flow-label font14">на онлайн<br/>депозитних платформах</div>
+					<div id="use-2e" class="flow-label font14">в інших людей<br/>особисто</div>
+					<div id="use-2f" class="flow-label font14">За поточним обмінним курсом</div>
+					<div id="use-2g" class="flow-label font14">Договірна ціна</div>
 
-					<div id="use-23" class="flow-label font14" style="font-size: 87.5%;">or</div>
+					<div id="use-23" class="flow-label font14">або</div>
 
-					<div id="use-3a" class="flow-label font22" style="font-size: 137.5%;">MINE BTC</div>
-					<div id="use-3b" class="flow-label font18" style="font-size: 112.5%;">You can do this by...</div>
-					<div id="use-3c" class="flow-label font14" style="font-size: 87.5%;">Buy a <a href="http://www.fxcm.com/bitcoin/mining.html" target="_blank" onclick="s_objectID=&quot;http://www.fxcm.com/bitcoin/mining.html_1&quot;;return this.s_oc?this.s_oc(e):true">mining rig</a></div>
-					<div id="use-3d" class="flow-label font14" style="font-size: 87.5%;">Join <a href="http://www.fxcm.com/bitcoin/mining.html" target="_blank" onclick="s_objectID=&quot;http://www.fxcm.com/bitcoin/mining.html_2&quot;;return this.s_oc?this.s_oc(e):true">mining pool(s)</a></div>
-					<div id="use-3e" class="flow-label font18" style="font-size: 112.5%;">Collect block reward</div>
+					<div id="use-3a" class="flow-label font22">ДОБУВАЙ BTC</div>
+					<div id="use-3b" class="flow-label font18">Ти можеш зробити це, якщо...</div>
+					<div id="use-3c" class="flow-label font14">Придбаєш <a href="mining.html" target="_blank">обладнання для добування</a></div>
+					<div id="use-3d" class="flow-label font14">Приєднаєшся до <a href="mining.html" target="_blank">об`єднання(нь) здобувачів</a></div>
+					<div id="use-3e" class="flow-label font18">Отримай свою винагороду</div>
 				</div>
 
 
