--- a/index.html
+++ b/index.html
@@ -682,34 +682,34 @@
 
 
 				<!-- STORE! -->
-				<h3 id="store" class="title">Store your Bitcoins!</h3>
-				<div class="sub-title px14">Your Bitcoins are stored in</div>
-				<div class="sub-title px22 black">ANONYMOUS ONLINE ADDRESSES.</div>
+				<h3 id="store" class="title">Зберігай свої біткоіни!</h3>
+				<div class="sub-title px14">Твої біткоіни зберігаються в</div>
+				<div class="sub-title px22 black">АНОНІМНИХ ОНЛАЙН АДРЕСАХ.</div>
 				<div id="store-container" class="flow-section-container">
-					<img src="./Bitcoin_files/store-blank.png" class="flow-section-image">
+					<img src="img/what/store-blank.png" class="flow-section-image" />
 
-					<div id="store-1a" class="flow-label font18" style="font-size: 112.5%;">Each address is like a glass safe:</div>
-					<div id="store-1b" class="flow-label font18" style="font-size: 112.5%;">everybody sees what’s inside but only you hold a private key to open it and spend. Addresses and private keys are long sequences of letters and numbers.</div>
+					<div id="store-1a" class="flow-label font18">Кожна адреса - це як скляний сейф:</div>
+					<div id="store-1b" class="flow-label font18">кожен може побачити, що знаходиться всередині, проте тільки ти володієш приватним ключем, щоб відкрити та витратити. Адреси та приватні ключі - це довгі послідовності букв і цифр.</div>
 
-					<div id="store-2a" class="flow-label font22" style="font-size: 137.5%;"><a href="http://www.fxcm.com/bitcoin/network.html" target="_blank" onclick="s_objectID=&quot;http://www.fxcm.com/bitcoin/network.html_1&quot;;return this.s_oc?this.s_oc(e):true">NETWORK</a></div>
-					<div id="store-2b" class="flow-label font18" style="font-size: 112.5%;">Your BTC address #1</div>
-					<div id="store-2b1" class="flow-label font18" style="font-size: 112.5%;">Balance BTC 0.01</div>
-					<div id="store-2c" class="flow-label font18" style="font-size: 112.5%;">Your BTC address #2</div>
-					<div id="store-2c1" class="flow-label font18" style="font-size: 112.5%;">Balance BTC 0.02</div>
-					<div id="store-2d" class="flow-label font18" style="font-size: 112.5%;">Your BTC address #3</div>
-					<div id="store-2d1" class="flow-label font18" style="font-size: 112.5%;">Balance BTC 3.00</div>
-					<div id="store-2e" class="flow-label font18" style="font-size: 112.5%;">Your BTC address #n</div>
-					<div id="store-2e1" class="flow-label font18" style="font-size: 112.5%;">Balance BTC 2.00</div>
+					<div id="store-2a" class="flow-label font22"><a href="network.html" target="_blank">МЕРЕЖА</a></div>
+					<div id="store-2b" class="flow-label font18">Твоя BTC адреса #1</div>
+					<div id="store-2b1" class="flow-label font18">Баланс BTC 0.01</div>
+					<div id="store-2c" class="flow-label font18">Твоя BTC адреса #2</div>
+					<div id="store-2c1" class="flow-label font18">Баланс BTC 0.02</div>
+					<div id="store-2d" class="flow-label font18">Твоя BTC адреса #3</div>
+					<div id="store-2d1" class="flow-label font18">Баланс BTC 3.00</div>
+					<div id="store-2e" class="flow-label font18">Твоя BTC адреса #n</div>
+					<div id="store-2e1" class="flow-label font18">Баланс BTC 2.00</div>
 
-					<div id="store-3a" class="flow-label font22" style="font-size: 137.5%;"><a href="http://www.fxcm.com/bitcoin/store.html" target="_blank" onclick="s_objectID=&quot;http://www.fxcm.com/bitcoin/store.html_2&quot;;return this.s_oc?this.s_oc(e):true">YOUR WALLET</a></div>
-					<div id="store-3b" class="flow-label font18" style="font-size: 112.5%;">Private key #1</div>
-					<div id="store-3c" class="flow-label font18" style="font-size: 112.5%;">Private key #2</div>
-					<div id="store-3d" class="flow-label font18" style="font-size: 112.5%;">Private key #3</div>
-					<div id="store-3e" class="flow-label font18" style="font-size: 112.5%;">Private key #n</div>
+					<div id="store-3a" class="flow-label font22"><a href="store.html" target="_blank">ТВІЙ ГАМАНЕЦЬ</a></div>
+					<div id="store-3b" class="flow-label font18">Приватний ключ #1</div>
+					<div id="store-3c" class="flow-label font18">Приватний ключ #2</div>
+					<div id="store-3d" class="flow-label font18">Приватний ключ #3</div>
+					<div id="store-3e" class="flow-label font18">Приватний ключ #n</div>
 
-					<div id="store-4a" class="flow-label font13" style="font-size: 81.25%;">*People can see the address but not who owns it. So your identity can remain anonymous, if you choose.</div>
-					<div id="store-4b" class="flow-label font14" style="font-size: 87.5%;">Everybody can see</div>
-					<div id="store-4c" class="flow-label font14" style="font-size: 87.5%;">Only you can see</div>
+					<div id="store-4a" class="flow-label font13">*Люди можуть бачити адресу, але не її володаря. Так твоя особистість може залишитись анонімною, якщо забажаєш.</div>
+					<div id="store-4b" class="flow-label font14">Всі можуть бачити</div>
+					<div id="store-4c" class="flow-label font14">Тільки ти можеш бачити</div>
 				</div>
 
 
