--- a/index.html
+++ b/index.html
@@ -714,32 +714,33 @@
 
 
 				<!-- SPEND -->
-				<h3 id="spend" class="title"><a href="http://www.fxcm.com/bitcoin/spend.html" target="_blank" onclick="s_objectID=&quot;http://www.fxcm.com/bitcoin/spend.html_1&quot;;return this.s_oc?this.s_oc(e):true">Spend</a> your Bitcoins</h3>
+				<h3 id="spend" class="title"><a href="spend.html" target="_blank">Витрачай</a> свої біткоіни</h3>
 				<div id="spend1-container" class="flow-section-container">
-					<img src="./Bitcoin_files/spend1-blank.png" class="flow-section-image">
+					<img src="img/what/spend1-blank.png" class="flow-section-image" />
 
-					<div id="spend-1a" class="flow-label font18" style="font-size: 112.5%;">at
-						<span class="font22 dark" style="font-size: 137.5%;"><br>ONLINE SHOPS<br></span>
-						for goods and services
+					<div id="spend-1a" class="flow-label font18">в
+						<span class="font22 dark"><br/>ОНЛАЙН МАГАЗИНАХ<br/></span>
+						на товари та послуги
 					</div>
 
-					<div id="spend-1b" class="flow-label font18" style="font-size: 112.5%;">at
-						<span class="font22 dark" style="font-size: 137.5%;"><br><a href="http://www.fxcm.com/bitcoin/countries.html" target="_blank" onclick="s_objectID=&quot;http://www.fxcm.com/bitcoin/countries.html_1&quot;;return this.s_oc?this.s_oc(e):true">POINTS OF SALE</a><br></span>
-						in BTC-friendly cafés<br>and shops
+					<div id="spend-1b" class="flow-label font18">на 
+						<span class="font22 dark"><br/><a href="countries.html" target="_blank">ПУНКТАХ ПРОДАЖУ</a><br/></span>
+						в біткоін-дружніх кафе<br/>та магазинах
 					</div>
 
-					<div id="spend-1c" class="flow-label font18" style="font-size: 112.5%;">at
-						<span class="font22 dark" style="font-size: 137.5%;"><br>BITCOIN EXCHANGES<br></span>
-						for other digital currencies
+					<div id="spend-1c" class="flow-label font18">на
+						<span class="font22 dark"><br/><a href="countries.html" target="_blank">БІТКОІН БІРЖАХ</a><br/></span>
+						на покупку інших цифрових валют
 					</div>
 				</div>
 				<div id="spend2-container" class="flow-section-container">
-					<img src="./Bitcoin_files/spend2-blank.png" class="flow-section-image">
+					<img src="img/what/spend2-blank.png" class="flow-section-image" />
 
-					<div id="spend-2a" class="flow-label font16" style="font-size: 100%;">Use your BTC address #</div>
-					<div id="spend-2b" class="flow-label font16" style="font-size: 100%;">and your private key #</div>
-					<div id="spend-2c" class="flow-label font16" style="font-size: 100%;">Approve transfer to seller’s address</div>
+					<div id="spend-2a" class="flow-label font16">Використовуй свою біткоін-адресу #</div>
+					<div id="spend-2b" class="flow-label font16">і свій приватний ключ #</div>
+					<div id="spend-2c" class="flow-label font16">Підтвердження передачі на адресу продавця</div>
 				</div>
+
 
 				<!-- VERIFICATION -->
 				<h3 id="verification" class="title">Verification</h3>
