--- a/index.html
+++ b/index.html
@@ -744,34 +744,34 @@
 
 				<!-- VERIFICATION -->
 				<h3 id="verification" class="title">Verification</h3>
-				<div class="sub-title">Checks the transfer has been carried out correctly. Here's how it happens:</div>
+				<div class="sub-title">Перевіряє чи операція була проведена коректно. Ось як це відбуваеється:</div>
 				<div id="verification-container" class="flow-section-container">
-					<img src="./Bitcoin_files/verification-blank.png" class="flow-section-image">
+					<img src="img/what/verification-blank.png" class="flow-section-image" />
 
-					<div id="verification-1a" class="flow-label font16" style="font-size: 100%;">Everybody can see if the transfer is legitimate</div>
-					<div id="verification-1b" class="flow-label font16" style="font-size: 100%;">No one sees your personal data or private key</div>
-					<div id="verification-1c" class="flow-label font16" style="font-size: 100%;">Takes over 10 minutes</div>
+					<div id="verification-1a" class="flow-label font16">Всі можуть побачити чи операція є допустимою</div>
+					<div id="verification-1b" class="flow-label font16">Ніхто не бачить твоїх особистих даних або приватний ключ</div>
+					<div id="verification-1c" class="flow-label font16">Займає більше 10 хвилин</div>
 
-					<div id="verification-2a" class="flow-label font22" style="font-size: 137.5%;">CARRIED OUT THROUGH MINING</div>
-					<div id="verification-2b" class="flow-label font16" style="font-size: 100%;">The transaction is encrypted<br>(turned into a long sequence of numbers)</div>
-					<div id="verification-2c" class="flow-label font16" style="font-size: 100%;">The transaction is included into a ‘block’ with all other transactions of the past 10 min.</div>
-					<div id="verification-2d" class="flow-label font16" style="font-size: 100%;">Thousands of computers (the network) verify the transactions of the block using a mathematical formula.</div>
-					<div id="verification-2e" class="flow-label font16" style="font-size: 100%;">When all transactions are confirmed, a block is ‘mined’</div>
-					<div id="verification-2f" class="flow-label font16" style="font-size: 100%;">Transaction gets recorded in the ‘block chain’, the general ledger of legitimate transactions.</div>
+					<div id="verification-2a" class="flow-label font22">ПРОВОДИТЬСЯ ЧЕРЕЗ ДОБУВАННЯ</div>
+					<div id="verification-2b" class="flow-label font16">Оперція зашифровується<br/>(перетворюється на довгу послідовність чисел)</div>
+					<div id="verification-2c" class="flow-label font16">Оперція включається в ‘блок’ разом з усіма операціями, які були проведені за останні 10 хвилин</div>
+					<div id="verification-2d" class="flow-label font16">Тисячі комп`ютерів (мережа) перевіряють операції в блоці, використовуючи математичну формулу.</div>
+					<div id="verification-2e" class="flow-label font16">Коли всі операції підтверджуються, блок ‘добувається’</div>
+					<div id="verification-2f" class="flow-label font16">Операція записується в ‘блоці-ланцюжку’- бухгалтерській книзі всіх допустимих операцій.</div>
 
-					<div id="verification-3a" class="flow-label font22" style="font-size: 137.5%;">SO THE BTC TRANSACTION IS:</div>
-					<div id="verification-3b1" class="flow-label font18" style="font-size: 112.5%;">SAFE</div>
-					<div id="verification-3b2" class="flow-label font16" style="font-size: 100%;">(no credit card data)</div>
-					<div id="verification-3c1" class="flow-label font18" style="font-size: 112.5%;">TRANSPARENT</div>
-					<div id="verification-3c2" class="flow-label font16" style="font-size: 100%;">(You can’t spend same BTCs twice)</div>
-					<div id="verification-3d" class="flow-label font18" style="font-size: 112.5%;">FAST</div>
-					<div id="verification-3e" class="flow-label font18" style="font-size: 112.5%;">CHEAP</div>
+					<div id="verification-3a" class="flow-label font22">ТАКИМ ЧИНОМ ОПЕРАЦІЯ З БІТКОІН Є:</div>
+					<div id="verification-3b1" class="flow-label font18">БЕЗПЕЧНОЮ</div>
+					<div id="verification-3b2" class="flow-label font16">(немає даних кредитної картки)</div>
+					<div id="verification-3c1" class="flow-label font18">ПРОЗОРОЮ</div>
+					<div id="verification-3c2" class="flow-label font16">(Ти не можеш використати ті самі біткоіни двічі)</div>
+					<div id="verification-3d" class="flow-label font18">ШВИДКОЮ</div>
+					<div id="verification-3e" class="flow-label font18">ДЕШЕВОЮ</div>
 
-					<div id="verification-4a" class="flow-label font16" style="font-size: 100%;">Miners may reap trans. fee: 0-0.01% of transaction value</div>
-					<div id="verification-4b" class="flow-label font16" style="font-size: 100%;">Miners share fix reward of 25 BTC/mined block.</div>
+					<div id="verification-4a" class="flow-label font16">Здобувачі можуть брати комісію за операцію: 0-0.01% від вартості операції</div>
+					<div id="verification-4b" class="flow-label font16">Здобувачі отримують фіксовану спільну винагороду в 25 BTC/добутий блок.</div>
 
-					<div id="verification-5" class="flow-label font22" style="font-size: 137.5%;">TRANSACTION COMPLETE</div>
-					<div id="verification-6" class="flow-label font21" style="font-size: 131.25%;">NUMBER OF BTCs IN CIRCULATION INCREASES<br>(UNTIL A MAX. OF 21 MILLION COINS)</div>
+					<div id="verification-5" class="flow-label font22">ОПЕРАЦІЯ ЗАВЕРШЕНА</div>
+					<div id="verification-6" class="flow-label font21">КІЛЬКІСТЬ БІТКОІНІВ В ОБІГУ ПІДВИЩУЄТЬСЯ<br/>(ДО ДОСЯГНЕННЯ МАКСИМУМУ В 21 МІЛЬЙОН МОНЕТ)</div>
 				</div>
 
 			</div>
