--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
 				<div id="use-container" class="flow-section-container">
 					<img src="img/what/use-blank.png" class="flow-section-image" />
 
-					<div id="use-1a" class="flow-label font22">СТВОРИТИ ЦИФРОВИЙ<a href="store.html" target="_blank">'ГАМАНЕЦЬ'</a>ДЛЯ ЗБЕРІГАННЯ</div>
+					<div id="use-1a" class="flow-label font22">СТВОРИТИ ЦИФРОВИЙ "ГАМАНЕЦЬ" ДЛЯ ЗБЕРІГАННЯ</div>
 					<div id="use-1b" class="flow-label font22">ОНЛАЙН</div>
 					<div id="use-1c" class="flow-label font18">або</div>
 					<div id="use-1d" class="flow-label font22">КОМП`ЮТЕР/МОБІЛЬНИЙ ТЕЛЕФОН</div>
