--- a/index.html
+++ b/index.html
@@ -660,12 +660,12 @@
 					<div id="use-1a" class="flow-label font22">СТВОРИТИ ЦИФРОВИЙ &quot;ГАМАНЕЦЬ&quot; ДЛЯ ЗБЕРІГАННЯ</div>
 					<div id="use-1b" class="flow-label font22">ОНЛАЙН</div>
 					<div id="use-1c" class="flow-label font18">або</div>
-					<div id="use-1d" class="flow-label font22">КОМП`ЮТЕР/МОБІЛЬНИЙ ТЕЛЕФОН</div>
+					<div id="use-1d" class="flow-label font22">КОМП`ЮТЕР/МОБІЛЬНИЙ</div>
 					<div id="use-1e" class="flow-label font22">НАПОВНИ ЙОГО БІТКОІНАМИ</div>
 
 					<div id="use-2a" class="flow-label font22">КУПУЙ BTC</div>
 					<div id="use-2b" class="flow-label font18">За допомогою банківського переказу або готівки $,£,€ і т.д....</div>
-					<div id="use-2c" class="flow-label font14">на онлайн<br/><a href="forex.html" target="_blank">біржах обміну біткоінів</a></div>
+					<div id="use-2c" class="flow-label font14">на біржах<br/>обміну біткоінів</div>
 					<div id="use-2d" class="flow-label font14">на онлайн<br/>депозитних платформах</div>
 					<div id="use-2e" class="flow-label font14">в інших людей<br/>особисто</div>
 					<div id="use-2f" class="flow-label font14">За поточним обмінним курсом</div>
@@ -675,8 +675,8 @@
 
 					<div id="use-3a" class="flow-label font22">ДОБУВАЙ BTC</div>
 					<div id="use-3b" class="flow-label font18">Ти можеш зробити це, якщо...</div>
-					<div id="use-3c" class="flow-label font14">Придбаєш <a href="mining.html" target="_blank">обладнання для добування</a></div>
-					<div id="use-3d" class="flow-label font14">Приєднаєшся до <a href="mining.html" target="_blank">об`єднання(нь) здобувачів</a></div>
+					<div id="use-3c" class="flow-label font14">Придбаєш обладнання для добування</a></div>
+					<div id="use-3d" class="flow-label font14">Приєднаєшся до об`єднання(нь) майнерів</a></div>
 					<div id="use-3e" class="flow-label font18">Отримай свою винагороду</div>
 				</div>
 
