--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
 
 
 				<!-- SPEND -->
-				<h3 id="spend" class="title"><a href="spend.html" target="_blank">Витрачай</a> свої біткоіни</h3>
+				<h3 id="spend" class="title">Витрачай свої біткоіни</h3>
 				<div id="spend1-container" class="flow-section-container">
 					<img src="img/what/spend1-blank.png" class="flow-section-image" />
 
@@ -723,13 +723,13 @@
 						на товари та послуги
 					</div>
 
-					<div id="spend-1b" class="flow-label font18">на 
-						<span class="font22 dark"><br/><a href="countries.html" target="_blank">ПУНКТАХ ПРОДАЖУ</a><br/></span>
+					<div id="spend-1b" class="flow-label font18">в 
+						<span class="font22 dark"><br/>ТОРГОВИХ ТОЧКАХ</a><br/></span>
 						в біткоін-дружніх кафе<br/>та магазинах
 					</div>
 
 					<div id="spend-1c" class="flow-label font18">на
-						<span class="font22 dark"><br/><a href="countries.html" target="_blank">БІТКОІН БІРЖАХ</a><br/></span>
+						<span class="font22 dark"><br/>БІТКОІН БІРЖАХ</a><br/></span>
 						на покупку інших цифрових валют
 					</div>
 				</div>
