--- a/index.html
+++ b/index.html
@@ -736,7 +736,7 @@
 				<div id="spend2-container" class="flow-section-container">
 					<img src="img/what/spend2-blank.png" class="flow-section-image" />
 
-					<div id="spend-2a" class="flow-label font16">Використовуй свою біткоін-адресу #</div>
+					<div id="spend-2a" class="flow-label font16">Вик-вуй свою біт-адресу #</div>
 					<div id="spend-2b" class="flow-label font16">і свій приватний ключ #</div>
 					<div id="spend-2c" class="flow-label font16">Підтвердження передачі на адресу продавця</div>
 				</div>
