--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@
 
 
 				<!-- VERIFICATION -->
-				<h3 id="verification" class="title">Verification</h3>
+				<h3 id="verification" class="title">Підтвердження</h3>
 				<div class="sub-title">Перевіряє чи операція була проведена коректно. Ось як це відбуваеється:</div>
 				<div id="verification-container" class="flow-section-container">
 					<img src="img/what/verification-blank.png" class="flow-section-image" />
