--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@
 					<img src="img/what/verification-blank.png" class="flow-section-image" />
 
 					<div id="verification-1a" class="flow-label font16">Всі можуть побачити чи операція є допустимою</div>
-					<div id="verification-1b" class="flow-label font16">Ніхто не бачить твоїх особистих даних або приватний ключ</div>
+					<div id="verification-1b" class="flow-label font16">Ніхто не бачить твоїх особистих даних або прив. ключ</div>
 					<div id="verification-1c" class="flow-label font16">Займає більше 10 хвилин</div>
 
 					<div id="verification-2a" class="flow-label font22">ПРОВОДИТЬСЯ ЧЕРЕЗ ДОБУВАННЯ</div>
