--- a/index.html
+++ b/index.html
@@ -673,10 +673,10 @@
 
 					<div id="use-23" class="flow-label font14">або</div>
 
-					<div id="use-3a" class="flow-label font22">ДОБУВАЙ BTC</div>
+					<div id="use-3a" class="flow-label font22">ОТРИМУЙ BTC</div>
 					<div id="use-3b" class="flow-label font18">Ти можеш зробити це, якщо...</div>
-					<div id="use-3c" class="flow-label font14">Придбаєш <a href="mining.html" target="_blank">обладнання для добування</a></div>
-					<div id="use-3d" class="flow-label font14">Приєднаєшся до <a href="mining.html" target="_blank">об`єднання(нь) здобувачів</a></div>
+					<div id="use-3c" class="flow-label font14">Придбаєш <a href="mining.html" target="_blank">обладнання для майнінгу</a></div>
+					<div id="use-3d" class="flow-label font14">Приєднаєшся до <a href="mining.html" target="_blank">об`єднання(нь) майнерів</a></div>
 					<div id="use-3e" class="flow-label font18">Отримай свою винагороду</div>
 				</div>
 
@@ -752,7 +752,7 @@
 					<div id="verification-1b" class="flow-label font16">Ніхто не бачить твоїх особистих даних або приватний ключ</div>
 					<div id="verification-1c" class="flow-label font16">Займає більше 10 хвилин</div>
 
-					<div id="verification-2a" class="flow-label font22">ПРОВОДИТЬСЯ ЧЕРЕЗ ДОБУВАННЯ</div>
+					<div id="verification-2a" class="flow-label font22">ПРОВОДИТЬСЯ ЧЕРЕЗ МАЙНІНГ</div>
 					<div id="verification-2b" class="flow-label font16">Оперція зашифровується<br/>(перетворюється на довгу послідовність чисел)</div>
 					<div id="verification-2c" class="flow-label font16">Оперція включається в ‘блок’ разом з усіма операціями, які були проведені за останні 10 хвилин</div>
 					<div id="verification-2d" class="flow-label font16">Тисячі комп`ютерів (мережа) перевіряють операції в блоці, використовуючи математичну формулу.</div>
@@ -767,8 +767,8 @@
 					<div id="verification-3d" class="flow-label font18">ШВИДКОЮ</div>
 					<div id="verification-3e" class="flow-label font18">ДЕШЕВОЮ</div>
 
-					<div id="verification-4a" class="flow-label font16">Здобувачі можуть брати комісію за операцію: 0-0.01% від вартості операції</div>
-					<div id="verification-4b" class="flow-label font16">Здобувачі отримують фіксовану спільну винагороду в 25 BTC/добутий блок.</div>
+					<div id="verification-4a" class="flow-label font16">Майнери можуть брати комісію за операцію: 0-0.01% від вартості операції</div>
+					<div id="verification-4b" class="flow-label font16">Майнери отримують фіксовану спільну винагороду в 12,5 BTC/добутий блок.</div>
 
 					<div id="verification-5" class="flow-label font22">ОПЕРАЦІЯ ЗАВЕРШЕНА</div>
 					<div id="verification-6" class="flow-label font21">КІЛЬКІСТЬ БІТКОІНІВ В ОБІГУ ПІДВИЩУЄТЬСЯ<br/>(ДО ДОСЯГНЕННЯ МАКСИМУМУ В 21 МІЛЬЙОН МОНЕТ)</div>
