--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
 
 					<div id="use-23" class="flow-label font14">або</div>
 
-					<div id="use-3a" class="flow-label font22">ДОБУВАЙ BTC</div>
+					<div id="use-3a" class="flow-label font22">ОТРИМУЙ BTC</div>
 					<div id="use-3b" class="flow-label font18">Ти можеш зробити це, якщо...</div>
 					<div id="use-3c" class="flow-label font14">Придбаєш обладнання для добування</a></div>
 					<div id="use-3d" class="flow-label font14">Приєднаєшся до об`єднання(нь) майнерів</a></div>
