--- a/index.html
+++ b/index.html
@@ -675,8 +675,8 @@
 
 					<div id="use-3a" class="flow-label font22">ОТРИМУЙ BTC</div>
 					<div id="use-3b" class="flow-label font18">Ти можеш зробити це, якщо...</div>
-					<div id="use-3c" class="flow-label font14">Придбаєш <a href="mining.html" target="_blank">обладнання для майнінгу</a></div>
-					<div id="use-3d" class="flow-label font14">Приєднаєшся до <a href="mining.html" target="_blank">об`єднання(нь) майнерів</a></div>
+					<div id="use-3c" class="flow-label font14">Придбаєш <a href="mining.html" target="_blank">обладнання для обслуговування мережі</a></div>
+					<div id="use-3d" class="flow-label font14">Приєднаєшся до <a href="mining.html" target="_blank">об`єднаннь майнерів</a></div>
 					<div id="use-3e" class="flow-label font18">Отримай свою винагороду</div>
 				</div>
 
@@ -752,7 +752,7 @@
 					<div id="verification-1b" class="flow-label font16">Ніхто не бачить твоїх особистих даних або приватний ключ</div>
 					<div id="verification-1c" class="flow-label font16">Займає більше 10 хвилин</div>
 
-					<div id="verification-2a" class="flow-label font22">ПРОВОДИТЬСЯ ЧЕРЕЗ МАЙНІНГ</div>
+					<div id="verification-2a" class="flow-label font22">ПРОВОДИТЬСЯ ЧЕРЕЗ ПРОЦЕС "МАЙНІНГ"</div>
 					<div id="verification-2b" class="flow-label font16">Оперція зашифровується<br/>(перетворюється на довгу послідовність чисел)</div>
 					<div id="verification-2c" class="flow-label font16">Оперція включається в ‘блок’ разом з усіма операціями, які були проведені за останні 10 хвилин</div>
 					<div id="verification-2d" class="flow-label font16">Тисячі комп`ютерів (мережа) перевіряють операції в блоці, використовуючи математичну формулу.</div>
